--- a/.gitignore
+++ b/.gitignore
@@ -204,6 +204,9 @@ $RECYCLE.BIN/
 *.feature.xlsx.*
 *.Specs_*.html
 
+# local data
+Data/
+
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
