--- a/Sources/VSW.Lib/VSW.Lib.csproj
+++ b/Sources/VSW.Lib/VSW.Lib.csproj
@@ -64,7 +64,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ajax">
-      <HintPath>..\LIB_BIN\Ajax.dll</HintPath>
+      <HintPath>..\Lib\LIB_BIN\Ajax.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -76,7 +76,7 @@
     <Reference Include="System.XML" />
     <Reference Include="VSW.Corev1.1, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\LIB_BIN\VSW.Corev1.1.dll</HintPath>
+      <HintPath>..\Lib\LIB_BIN\VSW.Corev1.1.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
