--- a/Sources/VSW.Website/VSW.Website.csproj
+++ b/Sources/VSW.Website/VSW.Website.csproj
@@ -59,14 +59,14 @@
     </Reference>
     <Reference Include="CKFinder, Version=2.1.0.1326, Culture=neutral, PublicKeyToken=579e7adc719a1423, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\CKFinder.dll</HintPath>
+      <HintPath>..\Lib\LIB_BIN\CKFinder.dll</HintPath>
     </Reference>
     <Reference Include="CKFinder_ImageResize, Version=2.1.0.1132, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\CKFinder_ImageResize.dll</HintPath>
+      <HintPath>..\Lib\LIB_BIN\CKFinder_ImageResize.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\LIB_BIN\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\Lib\LIB_BIN\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
