--- a/Sources/VSW.Website/Web.config
+++ b/Sources/VSW.Website/Web.config
@@ -2,7 +2,7 @@
 <configuration>
 
   <connectionStrings>
-    <add name="DBConnection" connectionString="Server=(local)\SQL2012;Database=ProductManager;User Id=sa;password=123**abc" providerName="System.Data.SqlClient" />
+    <add name="DBConnection" connectionString="Server=(local)\SQL2012;Database=MMO;User Id=sa;password=123**abc" providerName="System.Data.SqlClient" />
     <!--<add name="DBConnection" connectionString="Server=mssql173.dotvndns.vn;Database=dienlanh24h_vn_db;User Id=dienlanh24h_vn_user;password=123**abc" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
